# C-Template

./: CMakeLists.txt  build.sh
